--- a/simple.html
+++ b/simple.html
@@ -18,7 +18,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; 2014 Git.Training</p>
 	</footer>
 </body>
 </html>
